# Yanshee_Self-balancing

./: README.md
catkin_ws/src/rob_control/: CMakeLists.txt  package.xml
catkin_ws/src/rob_control/src/: self_balance.cpp
catkin_ws/src/ubt_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/ubt_msgs/doc/: TYPE_MAP
catkin_ws/src/ubt_msgs/msg/: action_report.msg  angles_set.msg  asr_iat_data.msg  gyro_report.msg  motion_planning_speed.msg  sensor_report.msg  tts_data.msg
catkin_ws/src/ubt_msgs/srv/: action.srv  battery_read.srv  board_read.srv  combine_request.srv  device_addr.srv  enable_set.srv  env_read.srv  ext_read.srv  gyro_read.srv  hts_status_change.srv  i2c_upgrade.srv  led.srv  led_reply.srv  motion_planning.srv  move_status.srv  music_play.srv  sensor_calibrate_set.srv  sensor_report_enable.srv  servo_active.srv  servo_offset_read.srv  servo_offset_write.srv  servo_read.srv  servo_write.srv  string_set.srv  task_configuration_get.srv  task_configuration_set.srv  ubt_interrupt_action.srv  update_list.srv  value_set.srv  version_read.srv  vision_ai_event.srv  vision_detect.srv  vision_get.srv  vision_monitor.srv  vision_recognition.srv  vision_report_color.srv  vision_report_expression.srv  vision_report_int.srv  vision_report_str.srv  vision_set.srv  (+15 more)
